--- a/DQN/lunar_lander.ipynb
+++ b/DQN/lunar_lander.ipynb
@@ -29,7 +29,8 @@
    "source": [
     "env = gym.make(\"LunarLander-v2\", render_mode = \"human\")\n",
     "env.reset()\n",
-    "env.render()"
+    "env.render()\n",
+    "NUM_ACTIONS = env.action_space.n"
    ]
   },
   {
@@ -104,15 +105,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following function represents the optimization steps. If our replay buffer is at capacity, we: \n",
+    " -sample a batch of transitions from memory\n",
+    " -Compute the expected value based on the policy network \n",
+    " -Compute target values summing the observed reward with expected next state value using the target network \n",
+    " -Compute loss between predicted values and target values and perform optimization on policy network  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def optimize_model(batch_size, memory, policy_network): \n",
+    "def optimize_model(gamma, batch_size, memory, policy_network, target_network, loss_fn, optimizer):\n",
+    "    \n",
     "    if len(memory) < batch_size:\n",
     "        return\n",
-    "    transitions = memory.sample(batch_size)"
+    "    \n",
+    "    device = policy_network.device\n",
+    "    transitions = memory.sample(batch_size)\n",
+    "    batch = Transition(*zip(*transitions))\n",
+    "    \n",
+    "    non_final_mask = torch.tensor([s is not None for s in batch.next_state],\n",
+    "                                  device=device, dtype=torch.bool)\n",
+    "    non_final_next_states = torch.cat([s for s in batch.next_state if s is not None])\n",
+    "    \n",
+    "    states = torch.cat(batch.state)\n",
+    "    actions = torch.cat(batch.action)\n",
+    "    rewards = torch.cat(batch.reward)\n",
+    "    \n",
+    "    predicted_values = policy_network(states).gather(1, actions) #gathers all max value actions for actions in batch\n",
+    "    next_state_values = torch.zeros(batch_size, device=device)\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        next_state_values[non_final_mask] = target_network(non_final_next_states).max(1)[0]\n",
+    "    \n",
+    "    target_values = (next_state_values * gamma) +rewards # compute bootstrapped target values\n",
+    "    \n",
+    "    loss = loss_fn(predicted_values, target_values.unsqueeze(1))\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    torch.nn.utils.clip_grad_value_(policy_network.parameters(), 100)\n",
+    "    optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trainer(num_episodes, batch_size, target_network, policy_network, gamma, epsilon, device, replay_buffer, optimizer, tau): \n",
+    "    \n",
+    "    for episode in range(num_episodes): \n",
+    "        \n",
+    "        state, _ = env.reset()\n",
+    "        state = torch.tensor(state, dtype=torch.float32, device = device).unsqueeze(0)\n",
+    "        episode_end = True\n",
+    "        \n",
+    "        while not episode_end: \n",
+    "            \n",
+    "            action_probs = policy_fn(NUM_ACTIONS, epsilon, state, policy_network)\n",
+    "            action = np.random.choice(np.arange(NUM_ACTIONS), p = action_probs[state])\n",
+    "            \n",
+    "            next_state, reward, terminated, truncated, _ = env.step(action)\n",
+    "            episode_end = terminated or truncated \n",
+    "            \n",
+    "            if not terminated: \n",
+    "                next_state = torch.tensor(next_state, dtype=torch.float32, \\\n",
+    "                    device = device).unsqueeze(0)\n",
+    "            \n",
+    "            replay_buffer.push(state, action, next_state, reward)\n",
+    "            state = next_state\n",
+    "            \n",
+    "            optimize_model(gamma, batch_size, replay_buffer, policy_network, target_network, optimizer)\n",
+    "            \n",
+    "            #extract network parameters for both networks \n",
+    "            target_network_state_dict = target_network.state_dict()\n",
+    "            policy_network_state_dict = policy_network.state_dict()\n",
+    "            \n",
+    "            for key in policy_network_state_dict.keys():\n",
+    "                # θ′ ← τ θ + (1 −τ )θ′\n",
+    "                target_network_state_dict[key] = policy_network_state_dict[key]*tau + target_network_state_dict[key]*(1-tau)\n",
+    "                target_network.load_state_dict(target_network_state_dict)\n",
+    "            \n",
+    "            "
    ]
   }
  ],
