--- a/DQN/lunar_lander.ipynb
+++ b/DQN/lunar_lander.ipynb
@@ -108,11 +108,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following function represents the optimization steps. If our replay buffer is at capacity, we: \n",
-    " -sample a batch of transitions from memory\n",
-    " -Compute the expected value based on the policy network \n",
-    " -Compute target values summing the observed reward with expected next state value using the target network \n",
-    " -Compute loss between predicted values and target values and perform optimization on policy network  "
+    "### Optimization Function Overview\n",
+    "\n",
+    "The following function represents the optimization steps. If our replay buffer is at capacity, we:\n",
+    "\n",
+    "- Sample a batch of transitions from memory. This initial step involves drawing a selection of varied transitions from our repository of stored experiences.\n",
+    "\n",
+    "- Compute the expected value using the policy network. This step requires us to determine probable outcomes and their associated probabilities, based on our current policy.\n",
+    "\n",
+    "- Compute target values by adding the observed reward to the expected next state value. This expected next state value is calculated using the target network instead of the policy network. \n",
+    "\n",
+    "- Compute the loss between the predicted and target values and then optimize the policy network. This final step is crucial for improving the predictive accuracy of our model. It works by learning from the discrepancies between predicted and actual outcomes, and uses these insights to refine the model.\n",
+    "\n",
+    "Through this sequence of steps, the function continuously enhances the model's predictive performance by learning from past errors.\n"
    ]
   },
   {
