--- a/DQN/lunar_lander.ipynb
+++ b/DQN/lunar_lander.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploring the observation space "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Box([-1.5       -1.5       -5.        -5.        -3.1415927 -5.\n",
+       " -0.        -0.       ], [1.5       1.5       5.        5.        3.1415927 5.        1.\n",
+       " 1.       ], (8,), float32)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observation_space = env.observation_space\n",
+    "observation_space"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our observation is represented by an 8-dimensional box. Above, the first array indicates the lower bounds for different parameters whereas the second array specifies the upper bounds for those same parameters. Our 8 parameters in this case are: \n",
+    "\n",
+    "- Position X: Horizontal coordinate\n",
+    "- Position Y: Vertical coordinate\n",
+    "- Velocity X: Horizontal speed\n",
+    "- Velocity Y: Vertical speed\n",
+    "- Angle: The angle at which the lander is pointed\n",
+    "- Angular Velocity: The speed at which the angle is changing\n",
+    "- Left leg contact: Boolean value (1 if the left leg is in contact with the ground, 0 otherwise)\n",
+    "- Right leg contact: Boolean value (1 if the right leg is in contact with the ground, 0 otherwise)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building a class for our replay buffer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +107,7 @@
     "        #add new transition to buffer \n",
     "        self.memory.append(Transition(*args))\n",
     "\n",
-    "    #simple sample funtion \n",
+    "    #simple function to sample some experience from memory randomly \n",
     "    def sample(self, batch_size):\n",
     "        return random.sample(self.memory, batch_size)\n",
     "\n",
@@ -63,18 +116,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining our Deep Q-Network"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#deep q network definition  \n",
     "class DQN(nn.Module):\n",
     "\n",
-    "    def __init__(self, n_observations, n_actions):\n",
+    "    def __init__(self, len_observation_space, n_actions):\n",
     "        super(DQN, self).__init__()\n",
     "        #observations to 128 \n",
-    "        self.layer1 = nn.Linear(n_observations, 128)\n",
+    "        self.layer1 = nn.Linear(len_observation_space, 128)\n",
     "        #linear transformation \n",
     "        self.layer2 = nn.Linear(128, 128)\n",
     "        #linear downsizing to number of possible actions \n",
@@ -87,8 +146,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Policy function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +202,7 @@
     "    \n",
     "    device = policy_network.device\n",
     "    transitions = memory.sample(batch_size)\n",
-    "    batch = Transition(*zip(*transitions))\n",
+    "    batch = Transition(*zip(*transitions)) #batches our data as follows: ((state1, state2, ..), (action1, action2, ...), ...)\n",
     "    \n",
     "    non_final_mask = torch.tensor([s is not None for s in batch.next_state],\n",
     "                                  device=device, dtype=torch.bool)\n",
@@ -147,12 +213,13 @@
     "    rewards = torch.cat(batch.reward)\n",
     "    \n",
     "    predicted_values = policy_network(states).gather(1, actions) #gathers all max value actions for actions in batch\n",
-    "    next_state_values = torch.zeros(batch_size, device=device)\n",
+    "    next_state_values = rewards.clone() # If the state is terminal, this is the q-value\n",
     "    \n",
     "    with torch.no_grad():\n",
-    "        next_state_values[non_final_mask] = target_network(non_final_next_states).max(1)[0]\n",
+    "        next_state_values[non_final_mask] = target_network(non_final_next_states).max(1)[0] #we use our target network with our \n",
+    "                                                                                            #sampled reward to give us a bootstrapped target\n",
     "    \n",
-    "    target_values = (next_state_values * gamma) +rewards # compute bootstrapped target values\n",
+    "    target_values = (next_state_values * gamma) +rewards # if the state is non terminal, we add to it the expected value of the next state \n",
     "    \n",
     "    loss = loss_fn(predicted_values, target_values.unsqueeze(1))\n",
     "    optimizer.zero_grad()\n",
@@ -163,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +252,7 @@
     "            \n",
     "            if not terminated: \n",
     "                next_state = torch.tensor(next_state, dtype=torch.float32, \\\n",
-    "                    device = device).unsqueeze(0)\n",
+    "                    device = device).unsqueeze(0) #we only care about next_state if the state is non terminal\n",
     "            \n",
     "            replay_buffer.push(state, action, next_state, reward)\n",
     "            state = next_state\n",
@@ -203,13 +270,39 @@
     "            \n",
     "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hyperparams \n",
+    "NUM_EPISODES = 600\n",
+    "E = 0.1\n",
+    "GAMMA = 1\n",
+    "ALPHA = 0.1\n",
+    "BATCH_SIZE = 8 \n",
+    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "replay_buffer = ReplayMemory(8)\n",
+    "policy_network = DQN(n_actions=NUM_ACTIONS, len_observation_space=8)\n",
+    "target_network = DQN(n_actions=NUM_ACTIONS, len_observation_space=8)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_accel",
+   "display_name": ".venv",
    "language": "python",
-   "name": "ml_accel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
