--- a/DQN/lunar_lander.ipynb
+++ b/DQN/lunar_lander.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        " 1.       ], (8,), float32)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,24 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "def trainer(num_episodes, batch_size, target_network, policy_network, gamma, epsilon, device, replay_buffer, optimizer, tau): \n",
-    "    \n",
+    "    reward_per_episode = []\n",
     "    for episode in range(num_episodes): \n",
     "        \n",
     "        state, _ = env.reset()\n",
     "        state = torch.tensor(state, dtype=torch.float32, device = device).unsqueeze(0)\n",
-    "        episode_end = True\n",
+    "        episode_end = False\n",
+    "        step = 0 \n",
+    "        cum_reward = 0 \n",
     "        \n",
     "        while not episode_end: \n",
     "            \n",
     "            action_probs = policy_fn(NUM_ACTIONS, epsilon, state, policy_network)\n",
     "            action = np.random.choice(np.arange(NUM_ACTIONS), p = action_probs[state])\n",
-    "            \n",
     "            next_state, reward, terminated, truncated, _ = env.step(action)\n",
+    "            step+=1\n",
+    "            cum_reward+=reward\n",
     "            episode_end = terminated or truncated \n",
     "            \n",
     "            if not terminated: \n",
@@ -268,12 +271,18 @@
     "                target_network_state_dict[key] = policy_network_state_dict[key]*tau + target_network_state_dict[key]*(1-tau)\n",
     "                target_network.load_state_dict(target_network_state_dict)\n",
     "            \n",
-    "            "
+    "        print(\"Episode: {} Steps: {}\".format(episode, step))\n",
+    "        reward_per_episode.append(cum_reward)\n",
+    "        plt.plot(reward_per_episode)\n",
+    "    plt.title('Cumulative Reward per Episode')\n",
+    "    plt.xlabel('Episode')\n",
+    "    plt.ylabel('Cumulative Reward')\n",
+    "    plt.pause(0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,13 +297,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "replay_buffer = ReplayMemory(8)\n",
     "policy_network = DQN(n_actions=NUM_ACTIONS, len_observation_space=8)\n",
-    "target_network = DQN(n_actions=NUM_ACTIONS, len_observation_space=8)"
+    "target_network = DQN(n_actions=NUM_ACTIONS, len_observation_space=8)\n",
+    "target_network.load_state_dict(policy_network.state_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.Adam(policy_network.parameters(), lr=ALPHA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0! (when checking argument for argument mat1 in method wrapper_CUDA_addmm)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[88], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m trainer(num_episodes\u001b[39m=\u001b[39;49mNUM_EPISODES, batch_size\u001b[39m=\u001b[39;49mBATCH_SIZE, target_network\u001b[39m=\u001b[39;49mtarget_network, policy_network\u001b[39m=\u001b[39;49mpolicy_network, gamma\u001b[39m=\u001b[39;49mGAMMA, epsilon\u001b[39m=\u001b[39;49mE, device\u001b[39m=\u001b[39;49mDEVICE, replay_buffer\u001b[39m=\u001b[39;49mreplay_buffer, optimizer\u001b[39m=\u001b[39;49moptimizer, tau\u001b[39m=\u001b[39;49m\u001b[39m0.5\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[84], line 13\u001b[0m, in \u001b[0;36mtrainer\u001b[0;34m(num_episodes, batch_size, target_network, policy_network, gamma, epsilon, device, replay_buffer, optimizer, tau)\u001b[0m\n\u001b[1;32m      9\u001b[0m cum_reward \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m \n\u001b[1;32m     11\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m episode_end: \n\u001b[0;32m---> 13\u001b[0m     action_probs \u001b[39m=\u001b[39m policy_fn(NUM_ACTIONS, epsilon, state, policy_network)\n\u001b[1;32m     14\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mchoice(np\u001b[39m.\u001b[39marange(NUM_ACTIONS), p \u001b[39m=\u001b[39m action_probs[state])\n\u001b[1;32m     15\u001b[0m     \u001b[39mprint\u001b[39m(action)\n",
+      "Cell \u001b[0;32mIn[82], line 6\u001b[0m, in \u001b[0;36mpolicy_fn\u001b[0;34m(num_actions, e, state, policy_network)\u001b[0m\n\u001b[1;32m      3\u001b[0m action_probabilities \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mones(num_actions)\u001b[39m.\u001b[39mto(state\u001b[39m.\u001b[39mdevice) \u001b[39m*\u001b[39m (e\u001b[39m/\u001b[39mnum_actions)\n\u001b[1;32m      5\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad(): \n\u001b[0;32m----> 6\u001b[0m     highest_action_value \u001b[39m=\u001b[39m policy_network(state)\u001b[39m.\u001b[39mmax(\u001b[39m1\u001b[39m)[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mitem()\n\u001b[1;32m      8\u001b[0m action_probabilities[highest_action_value] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m e)\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m action_probabilities\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "Cell \u001b[0;32mIn[81], line 13\u001b[0m, in \u001b[0;36mDQN.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[0;32m---> 13\u001b[0m     x \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlayer1(x))\n\u001b[1;32m     14\u001b[0m     x \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayer2(x))\n\u001b[1;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayer3(x)\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/linear.py:114\u001b[0m, in \u001b[0;36mLinear.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 114\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mlinear(\u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0! (when checking argument for argument mat1 in method wrapper_CUDA_addmm)"
+     ]
+    }
+   ],
+   "source": [
+    "trainer(num_episodes=NUM_EPISODES, batch_size=BATCH_SIZE, target_network=target_network, policy_network=policy_network, gamma=GAMMA, epsilon=E, device=DEVICE, replay_buffer=replay_buffer, optimizer=optimizer, tau=0.5)"
    ]
   }
  ],
