modified:   DQN/lunar_lander.ipynb

--- a/DQN/lunar_lander.ipynb
+++ b/DQN/lunar_lander.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        " 1.       ], (8,), float32)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,16 +191,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def optimize_model(gamma, batch_size, memory, policy_network, target_network, loss_fn, optimizer):\n",
+    "def optimize_model(gamma, batch_size, memory, policy_network, target_network, loss_fn, optimizer, device):\n",
     "    \n",
     "    if len(memory) < batch_size:\n",
     "        return\n",
     "    \n",
-    "    device = policy_network.device\n",
     "    transitions = memory.sample(batch_size)\n",
     "    batch = Transition(*zip(*transitions)) #batches our data as follows: ((state1, state2, ..), (action1, action2, ...), ...)\n",
     "    \n",
@@ -230,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +246,7 @@
     "        while not episode_end: \n",
     "            \n",
     "            action_probs = policy_fn(NUM_ACTIONS, epsilon, state, policy_network)\n",
-    "            action = np.random.choice(np.arange(NUM_ACTIONS), p = action_probs[state])\n",
+    "            action = np.random.choice(np.arange(NUM_ACTIONS), p = action_probs.squeeze().cpu().numpy())\n",
     "            next_state, reward, terminated, truncated, _ = env.step(action)\n",
     "            step+=1\n",
     "            cum_reward+=reward\n",
@@ -257,10 +256,13 @@
     "                next_state = torch.tensor(next_state, dtype=torch.float32, \\\n",
     "                    device = device).unsqueeze(0) #we only care about next_state if the state is non terminal\n",
     "            \n",
+    "            action = torch.tensor(action, dtype=torch.int64, device=device).unsqueeze(0)\n",
+    "            print(type(reward))\n",
+    "            #reward = torch.tensor(reward, dtype=torch.int64, device=device).unsqueeze(0)\n",
     "            replay_buffer.push(state, action, next_state, reward)\n",
     "            state = next_state\n",
     "            \n",
-    "            optimize_model(gamma, batch_size, replay_buffer, policy_network, target_network, optimizer)\n",
+    "            optimize_model(gamma, batch_size, replay_buffer, policy_network, target_network,loss_fn=torch.nn.MSELoss(size_average=True), optimizer=optimizer, device=device)\n",
     "            \n",
     "            #extract network parameters for both networks \n",
     "            target_network_state_dict = target_network.state_dict()\n",
@@ -282,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +308,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,12 +317,14 @@
     "replay_buffer = ReplayMemory(8)\n",
     "policy_network = DQN(n_actions=NUM_ACTIONS, len_observation_space=8)\n",
     "target_network = DQN(n_actions=NUM_ACTIONS, len_observation_space=8)\n",
+    "policy_network.to(DEVICE)\n",
+    "target_network.to(DEVICE)\n",
     "target_network.load_state_dict(policy_network.state_dict())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,24 +333,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0! (when checking argument for argument mat1 in method wrapper_CUDA_addmm)",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/aryaman.pandya/ml_accel/lib/python3.9/site-packages/gym/utils/passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(terminated, (bool, np.bool8)):\n",
+      "/home/aryaman.pandya/ml_accel/lib/python3.9/site-packages/torch/nn/_reduction.py:42: UserWarning: size_average and reduce args will be deprecated, please use reduction='mean' instead.\n",
+      "  warnings.warn(warning.format(ret))\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "expected Tensor as element 0 in argument 0, but got numpy.float64",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[88], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m trainer(num_episodes\u001b[39m=\u001b[39;49mNUM_EPISODES, batch_size\u001b[39m=\u001b[39;49mBATCH_SIZE, target_network\u001b[39m=\u001b[39;49mtarget_network, policy_network\u001b[39m=\u001b[39;49mpolicy_network, gamma\u001b[39m=\u001b[39;49mGAMMA, epsilon\u001b[39m=\u001b[39;49mE, device\u001b[39m=\u001b[39;49mDEVICE, replay_buffer\u001b[39m=\u001b[39;49mreplay_buffer, optimizer\u001b[39m=\u001b[39;49moptimizer, tau\u001b[39m=\u001b[39;49m\u001b[39m0.5\u001b[39;49m)\n",
-      "Cell \u001b[0;32mIn[84], line 13\u001b[0m, in \u001b[0;36mtrainer\u001b[0;34m(num_episodes, batch_size, target_network, policy_network, gamma, epsilon, device, replay_buffer, optimizer, tau)\u001b[0m\n\u001b[1;32m      9\u001b[0m cum_reward \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m \n\u001b[1;32m     11\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m episode_end: \n\u001b[0;32m---> 13\u001b[0m     action_probs \u001b[39m=\u001b[39m policy_fn(NUM_ACTIONS, epsilon, state, policy_network)\n\u001b[1;32m     14\u001b[0m     action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mchoice(np\u001b[39m.\u001b[39marange(NUM_ACTIONS), p \u001b[39m=\u001b[39m action_probs[state])\n\u001b[1;32m     15\u001b[0m     \u001b[39mprint\u001b[39m(action)\n",
-      "Cell \u001b[0;32mIn[82], line 6\u001b[0m, in \u001b[0;36mpolicy_fn\u001b[0;34m(num_actions, e, state, policy_network)\u001b[0m\n\u001b[1;32m      3\u001b[0m action_probabilities \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mones(num_actions)\u001b[39m.\u001b[39mto(state\u001b[39m.\u001b[39mdevice) \u001b[39m*\u001b[39m (e\u001b[39m/\u001b[39mnum_actions)\n\u001b[1;32m      5\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad(): \n\u001b[0;32m----> 6\u001b[0m     highest_action_value \u001b[39m=\u001b[39m policy_network(state)\u001b[39m.\u001b[39mmax(\u001b[39m1\u001b[39m)[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mitem()\n\u001b[1;32m      8\u001b[0m action_probabilities[highest_action_value] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m e)\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m action_probabilities\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "Cell \u001b[0;32mIn[81], line 13\u001b[0m, in \u001b[0;36mDQN.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[0;32m---> 13\u001b[0m     x \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlayer1(x))\n\u001b[1;32m     14\u001b[0m     x \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayer2(x))\n\u001b[1;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayer3(x)\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/linear.py:114\u001b[0m, in \u001b[0;36mLinear.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 114\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mlinear(\u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0! (when checking argument for argument mat1 in method wrapper_CUDA_addmm)"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[208], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m trainer(num_episodes\u001b[39m=\u001b[39;49mNUM_EPISODES, batch_size\u001b[39m=\u001b[39;49mBATCH_SIZE, target_network\u001b[39m=\u001b[39;49mtarget_network, policy_network\u001b[39m=\u001b[39;49mpolicy_network, gamma\u001b[39m=\u001b[39;49mGAMMA, epsilon\u001b[39m=\u001b[39;49mE, device\u001b[39m=\u001b[39;49mDEVICE, replay_buffer\u001b[39m=\u001b[39;49mreplay_buffer, optimizer\u001b[39m=\u001b[39;49moptimizer, tau\u001b[39m=\u001b[39;49m\u001b[39m0.5\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[204], line 28\u001b[0m, in \u001b[0;36mtrainer\u001b[0;34m(num_episodes, batch_size, target_network, policy_network, gamma, epsilon, device, replay_buffer, optimizer, tau)\u001b[0m\n\u001b[1;32m     25\u001b[0m replay_buffer\u001b[39m.\u001b[39mpush(state, action_tensor, next_state, reward)\n\u001b[1;32m     26\u001b[0m state \u001b[39m=\u001b[39m next_state\n\u001b[0;32m---> 28\u001b[0m optimize_model(gamma, batch_size, replay_buffer, policy_network, target_network,loss_fn\u001b[39m=\u001b[39;49mtorch\u001b[39m.\u001b[39;49mnn\u001b[39m.\u001b[39;49mMSELoss(size_average\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m), optimizer\u001b[39m=\u001b[39;49moptimizer, device\u001b[39m=\u001b[39;49mdevice)\n\u001b[1;32m     30\u001b[0m \u001b[39m#extract network parameters for both networks \u001b[39;00m\n\u001b[1;32m     31\u001b[0m target_network_state_dict \u001b[39m=\u001b[39m target_network\u001b[39m.\u001b[39mstate_dict()\n",
+      "Cell \u001b[0;32mIn[203], line 15\u001b[0m, in \u001b[0;36moptimize_model\u001b[0;34m(gamma, batch_size, memory, policy_network, target_network, loss_fn, optimizer, device)\u001b[0m\n\u001b[1;32m     13\u001b[0m states \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mcat(batch\u001b[39m.\u001b[39mstate)\n\u001b[1;32m     14\u001b[0m actions \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mcat(batch\u001b[39m.\u001b[39maction)\n\u001b[0;32m---> 15\u001b[0m rewards \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mcat(batch\u001b[39m.\u001b[39;49mreward)\n\u001b[1;32m     17\u001b[0m predicted_values \u001b[39m=\u001b[39m policy_network(states)\u001b[39m.\u001b[39mgather(\u001b[39m1\u001b[39m, actions) \u001b[39m#gathers all max value actions for actions in batch\u001b[39;00m\n\u001b[1;32m     18\u001b[0m next_state_values \u001b[39m=\u001b[39m rewards\u001b[39m.\u001b[39mclone() \u001b[39m# If the state is terminal, this is the q-value\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: expected Tensor as element 0 in argument 0, but got numpy.float64"
      ]
     }
    ],
