finished DQN training

--- a/DQN/scratchpad.ipynb
+++ b/DQN/scratchpad.ipynb
@@ -126,13 +126,49 @@
    "source": [
     "y.unsqueeze(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple, deque\n",
+    "capacity = 5 \n",
+    "memory = deque([], maxlen=capacity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([0], maxlen=5)\n",
+      "deque([0, 1], maxlen=5)\n",
+      "deque([0, 1, 2], maxlen=5)\n",
+      "deque([0, 1, 2, 3], maxlen=5)\n",
+      "deque([0, 1, 2, 3, 4], maxlen=5)\n",
+      "deque([1, 2, 3, 4, 5], maxlen=5)\n",
+      "deque([2, 3, 4, 5, 6], maxlen=5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(20): \n",
+    "    memory.append(i)\n",
+    "    print(memory)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "ml_accel",
    "language": "python",
-   "name": "ml_accel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -144,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
