--- a/DQN/scratchpad.ipynb
+++ b/DQN/scratchpad.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,20 @@
       "deque([0, 1, 2, 3], maxlen=5)\n",
       "deque([0, 1, 2, 3, 4], maxlen=5)\n",
       "deque([1, 2, 3, 4, 5], maxlen=5)\n",
-      "deque([2, 3, 4, 5, 6], maxlen=5)\n"
+      "deque([2, 3, 4, 5, 6], maxlen=5)\n",
+      "deque([3, 4, 5, 6, 7], maxlen=5)\n",
+      "deque([4, 5, 6, 7, 8], maxlen=5)\n",
+      "deque([5, 6, 7, 8, 9], maxlen=5)\n",
+      "deque([6, 7, 8, 9, 10], maxlen=5)\n",
+      "deque([7, 8, 9, 10, 11], maxlen=5)\n",
+      "deque([8, 9, 10, 11, 12], maxlen=5)\n",
+      "deque([9, 10, 11, 12, 13], maxlen=5)\n",
+      "deque([10, 11, 12, 13, 14], maxlen=5)\n",
+      "deque([11, 12, 13, 14, 15], maxlen=5)\n",
+      "deque([12, 13, 14, 15, 16], maxlen=5)\n",
+      "deque([13, 14, 15, 16, 17], maxlen=5)\n",
+      "deque([14, 15, 16, 17, 18], maxlen=5)\n",
+      "deque([15, 16, 17, 18, 19], maxlen=5)\n"
      ]
     }
    ],
