started training actor critic networks

--- a/ActorCriticMethods/ddpg.ipynb
+++ b/ActorCriticMethods/ddpg.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "env = gym.make('HalfCheetah-v4', render_mode = \"human\")\n",
     "env.reset()\n",
-    "env.render()\n",
-    "NUM_ACTIONS = env.action_space"
+    "env.render()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -53,13 +52,22 @@
        "Box(-1.0, 1.0, (6,), float32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "env.action_space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIM_ACTIONS = 6"
    ]
   },
   {
@@ -71,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +88,7 @@
        "Box(-inf, inf, (17,), float64)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,6 +96,15 @@
    "source": [
     "observation_space = env.observation_space\n",
     "observation_space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIM_OBSERVATIONS = 17"
    ]
   },
   {
@@ -99,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "class critic_Q(nn.Module):\n",
     "\n",
-    "    def __init__(self, len_observation_space, n_actions):\n",
+    "    def __init__(self, len_observation_space, dim_actions):\n",
     "        super(critic_Q, self).__init__()\n",
     "        #observations to 128 \n",
-    "        self.layer1 = nn.Linear(len_observation_space + n_actions, 128)\n",
+    "        self.layer1 = nn.Linear(len_observation_space + dim_actions, 128)\n",
     "        #linear transformation \n",
     "        self.layer2 = nn.Linear(128, 128)\n",
     "        #linear downsizing to number of possible actions \n",
@@ -166,19 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "class actor_Policy(nn.Module): \n",
-    "    def __init__(self, len_observation_space, n_actions):\n",
-    "        super(critic_Q, self).__init__()\n",
+    "    def __init__(self, len_observation_space, dim_actions):\n",
+    "        super(actor_Policy, self).__init__()\n",
     "        #observations to 128 \n",
     "        self.layer1 = nn.Linear(len_observation_space, 128)\n",
     "        #linear transformation \n",
     "        self.layer2 = nn.Linear(128, 128)\n",
     "        #deterministically outputting a single action \n",
-    "        self.layer3 = nn.Linear(128, n_actions)\n",
+    "        self.layer3 = nn.Linear(128, dim_actions)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.layer1(x))\n",
@@ -207,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,8 +263,6 @@
     "    torch.nn.utils.clip_grad_value_(critic.parameters(), 100)\n",
     "    critic_optimizer.step()\n",
     "\n",
-    "\n",
-    "    # TODO: The actor should be dividing optimization by target network the same way the critic is, need to come back to this and fix \n",
     "    log_action = torch.log(actions)\n",
     "    actor_loss = - log_action * td_error\n",
     "    actor_optimizer.zero_grad()\n",
@@ -257,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +292,7 @@
     "            epsilon-=0.1\n",
     "\n",
     "        while not episode_end:\n",
-    "            action = actor(state)\n",
+    "            action = actor(state).squeeze().cpu().detach().numpy()\n",
     "            next_state, reward, terminated, truncated, _ = env.step(action)\n",
     "            \n",
     "            step+=1\n",
@@ -300,7 +315,7 @@
     "            optimize_model(gamma, batch_size, replay_buffer, actor, critic, target_actor, target_critic,loss_fn=torch.nn.MSELoss(size_average=True), actor_optimizer=actor_optimizer,\\\n",
     "                           critic_optimizer= critic_optimizer, device=device)\n",
     "            \n",
-    "            if not episode % (num_episodes / 50):\n",
+    "            if not episode % (num_episodes / 50) and episode > 50:\n",
     "                #extract network parameters for both networks \n",
     "                target_critic_state_dict = target_critic.state_dict()\n",
     "                policy_network_state_dict = critic.state_dict()\n",
@@ -328,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,17 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "replay_buffer = ReplayMemory(100000)\n",
     "\n",
-    "actor = actor_Policy(n_actions=NUM_ACTIONS, len_observation_space=8)\n",
-    "target_actor = actor_Policy(n_actions=NUM_ACTIONS, len_observation_space=8)\n",
+    "actor = actor_Policy(len_observation_space=DIM_OBSERVATIONS, dim_actions=DIM_ACTIONS)\n",
+    "target_actor = actor_Policy(len_observation_space=DIM_OBSERVATIONS, dim_actions=DIM_ACTIONS)\n",
     "\n",
-    "critic = critic_Q(n_actions=NUM_ACTIONS, len_observation_space=8)\n",
-    "target_critic = critic_Q(n_actions=NUM_ACTIONS, len_observation_space=8)\n",
+    "critic = critic_Q(len_observation_space=DIM_OBSERVATIONS, dim_actions=DIM_ACTIONS)\n",
+    "target_critic = critic_Q(len_observation_space=DIM_OBSERVATIONS, dim_actions=DIM_ACTIONS)\n",
     "\n",
     "actor.to(DEVICE)\n",
     "target_actor.to(DEVICE)\n",
@@ -368,20 +394,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.Adam(policy_network.parameters(), lr=ALPHA)"
+    "actor_optimizer = torch.optim.Adam(actor.parameters(), lr=ALPHA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.Adam(policy_network.parameters(), lr=ALPHA)"
+    "critic_optimizer = torch.optim.Adam(critic.parameters(), lr=ALPHA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Tensors must have same number of dimensions: got 2 and 3",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[113], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m trainer(num_episodes\u001b[39m=\u001b[39;49mNUM_EPISODES, batch_size\u001b[39m=\u001b[39;49mBATCH_SIZE, actor\u001b[39m=\u001b[39;49mactor, critic\u001b[39m=\u001b[39;49mcritic, target_actor\u001b[39m=\u001b[39;49mtarget_actor, target_critic\u001b[39m=\u001b[39;49mtarget_critic,\\\n\u001b[1;32m      2\u001b[0m          gamma\u001b[39m=\u001b[39;49mGAMMA, epsilon\u001b[39m=\u001b[39;49mE, device\u001b[39m=\u001b[39;49mDEVICE, replay_buffer\u001b[39m=\u001b[39;49mreplay_buffer, actor_optimizer\u001b[39m=\u001b[39;49mactor_optimizer, critic_optimizer\u001b[39m=\u001b[39;49mcritic_optimizer, tau\u001b[39m=\u001b[39;49m\u001b[39m0.005\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[108], line 37\u001b[0m, in \u001b[0;36mtrainer\u001b[0;34m(num_episodes, batch_size, target_actor, actor, target_critic, critic, gamma, epsilon, device, replay_buffer, actor_optimizer, critic_optimizer, tau)\u001b[0m\n\u001b[1;32m     34\u001b[0m replay_buffer\u001b[39m.\u001b[39mpush(state, action, next_state, reward)\n\u001b[1;32m     35\u001b[0m state \u001b[39m=\u001b[39m next_state\n\u001b[0;32m---> 37\u001b[0m optimize_model(gamma, batch_size, replay_buffer, actor, critic, target_actor, target_critic,loss_fn\u001b[39m=\u001b[39;49mtorch\u001b[39m.\u001b[39;49mnn\u001b[39m.\u001b[39;49mMSELoss(size_average\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m), actor_optimizer\u001b[39m=\u001b[39;49mactor_optimizer,\\\n\u001b[1;32m     38\u001b[0m                critic_optimizer\u001b[39m=\u001b[39;49m critic_optimizer, device\u001b[39m=\u001b[39;49mdevice)\n\u001b[1;32m     40\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m episode \u001b[39m%\u001b[39m (num_episodes \u001b[39m/\u001b[39m \u001b[39m50\u001b[39m) \u001b[39mand\u001b[39;00m episode \u001b[39m>\u001b[39m \u001b[39m50\u001b[39m:\n\u001b[1;32m     41\u001b[0m     \u001b[39m#extract network parameters for both networks \u001b[39;00m\n\u001b[1;32m     42\u001b[0m     target_critic_state_dict \u001b[39m=\u001b[39m target_critic\u001b[39m.\u001b[39mstate_dict()\n",
+      "Cell \u001b[0;32mIn[107], line 18\u001b[0m, in \u001b[0;36moptimize_model\u001b[0;34m(gamma, batch_size, memory, actor, critic, target_actor, target_critic, loss_fn, actor_optimizer, critic_optimizer, device)\u001b[0m\n\u001b[1;32m     15\u001b[0m rewards \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mcat(batch\u001b[39m.\u001b[39mreward)\n\u001b[1;32m     17\u001b[0m actions \u001b[39m=\u001b[39m actions\u001b[39m.\u001b[39munsqueeze(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m---> 18\u001b[0m predicted_values \u001b[39m=\u001b[39m critic(states, actions) \n\u001b[1;32m     20\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[1;32m     21\u001b[0m     next_actions \u001b[39m=\u001b[39m target_actor(non_final_next_states)  \n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "Cell \u001b[0;32mIn[105], line 13\u001b[0m, in \u001b[0;36mcritic_Q.forward\u001b[0;34m(self, observation, action)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, observation, action):\n\u001b[0;32m---> 13\u001b[0m     x \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mcat([observation, action], dim\u001b[39m=\u001b[39;49m\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m     14\u001b[0m     x \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayer1(x))\n\u001b[1;32m     15\u001b[0m     x \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayer2(x))\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Tensors must have same number of dimensions: got 2 and 3"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "trainer(num_episodes=NUM_EPISODES, batch_size=BATCH_SIZE, actor=actor, critic=critic, target_actor=target_actor, target_critic=target_critic,\\\n",
+    "         gamma=GAMMA, epsilon=E, device=DEVICE, replay_buffer=replay_buffer, actor_optimizer=actor_optimizer, critic_optimizer=critic_optimizer, tau=0.005)"
    ]
   }
  ],
