--- a/ActorCriticMethods/ddpg.ipynb
+++ b/ActorCriticMethods/ddpg.ipynb
@@ -353,10 +353,9 @@
     "        if not epoch % 250 and epoch > 0 and epoch < 749: \n",
     "            epoch-=0.1\n",
     "        \n",
-    "        for cycle in range(num_cycles): \n",
+    "        for _ in range(num_cycles): \n",
     "\n",
     "            cum_reward = 0\n",
-    "            epoch_end = False\n",
     "            state, _ = env.reset()\n",
     "            state = torch.tensor(state, dtype=torch.float32, device = device).unsqueeze(0)\n",
     "            \n",
@@ -369,9 +368,7 @@
     "                noise = np.random.normal(0, noise_factor, size=env.action_space.shape) # Adjust the scale (0.2) as needed\n",
     "                \n",
     "                action = np.clip(action + noise, env.action_space.low, env.action_space.high) #clip so that our actions never exceed the allowed thresholds \n",
-    "                next_state, reward, terminated, truncated, _ = env.step(action)\n",
-    "\n",
-    "                epoch_end = terminated or truncated\n",
+    "                next_state, reward, terminated, _, _ = env.step(action)\n",
     "\n",
     "                cum_reward+=reward\n",
     "                \n",
